[gd_scene load_steps=15 format=2]

[ext_resource path="res://fg2.png" type="Texture" id=1]
[ext_resource path="res://Camera2D.gd" type="Script" id=2]
[ext_resource path="res://pixel.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://cut4.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
rotating = true
current = true
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Texture3" type="Sprite" parent="."]
modulate = Color( 0, 0, 1, 0.407843 )
position = Vector2( 198, 167 )
z_index = -2
centered = false
region_enabled = true
region_rect = Rect2( 39, 112, 130, 33 )

[node name="Texture" type="Sprite" parent="."]
position = Vector2( 448, 120 )
scale = Vector2( 2, 2 )
z_index = -2
texture = ExtResource( 5 )
centered = false
region_enabled = true
region_rect = Rect2( 169, 87, 86, 84 )

[node name="ItemList2" type="ItemList" parent="."]
margin_left = 1091.0
margin_right = 1280.0
margin_bottom = 198.0
custom_fonts/font = SubResource( 1 )

[node name="ItemList" type="ItemList" parent="."]
margin_left = 902.0
margin_right = 1091.0
margin_bottom = 198.0
custom_fonts/font = SubResource( 1 )

[node name="Label2" type="Label" parent="."]
margin_left = 3.0
margin_top = 510.0
margin_right = 32.0
margin_bottom = 523.0
custom_fonts/font = SubResource( 2 )
text = "FPS:"
align = 1
valign = 1

[node name="Label" type="Label" parent="."]
margin_top = 491.0
margin_right = 645.0
margin_bottom = 506.0
custom_fonts/font = SubResource( 2 )
text = "Mouse:"
align = 1
valign = 1

[node name="Add Offset" type="Button" parent="."]
margin_left = 1093.0
margin_top = 200.0
margin_right = 1278.0
margin_bottom = 217.0
custom_fonts/font = SubResource( 3 )
text = "Add Offset"

[node name="Remove Offset" type="Button" parent="."]
margin_left = 1093.0
margin_top = 221.0
margin_right = 1278.0
margin_bottom = 238.0
custom_fonts/font = SubResource( 3 )
text = "Remove Offset"

[node name="Load Offset" type="Button" parent="."]
margin_left = 1093.0
margin_top = 242.0
margin_right = 1278.0
margin_bottom = 259.0
custom_fonts/font = SubResource( 3 )
text = "Load Offset"

[node name="Add Frame" type="Button" parent="."]
margin_left = 904.0
margin_top = 200.0
margin_right = 1089.0
margin_bottom = 217.0
custom_fonts/font = SubResource( 3 )
text = "Add Frame"

[node name="Remove Frame" type="Button" parent="."]
margin_left = 904.0
margin_top = 221.0
margin_right = 1089.0
margin_bottom = 238.0
custom_fonts/font = SubResource( 3 )
text = "Remove Frame"

[node name="Load Frame" type="Button" parent="."]
margin_left = 904.0
margin_top = 242.0
margin_right = 1089.0
margin_bottom = 259.0
custom_fonts/font = SubResource( 3 )
text = "Load Frame"

[node name="Load Texture" type="Button" parent="."]
margin_left = 4.0
margin_top = 533.0
margin_right = 105.0
margin_bottom = 550.0
custom_fonts/font = SubResource( 3 )
text = "Load Animation"

[node name="Save Animation" type="Button" parent="."]
margin_left = 469.0
margin_top = 537.0
margin_right = 570.0
margin_bottom = 554.0
custom_fonts/font = SubResource( 3 )
text = "Save Animation"

[node name="Offsets" type="Position2D" parent="."]
position = Vector2( 643, 0 )

[node name="TextureOffset" type="Sprite" parent="Offsets"]
texture = ExtResource( 5 )
centered = false

[node name="Hx" type="Line2D" parent="Offsets"]
points = PoolVector2Array( 0, 0, 0, 256 )
width = 1.0
default_color = Color( 0, 1, 0, 1 )

[node name="Hy" type="Line2D" parent="Offsets"]
points = PoolVector2Array( 0, 0, 256, 0 )
width = 1.0
default_color = Color( 0, 1, 0, 1 )

[node name="Vx" type="Line2D" parent="Offsets"]
points = PoolVector2Array( 0, 0, 0, 256 )
width = 1.0
default_color = Color( 1, 0, 0, 1 )

[node name="Vy" type="Line2D" parent="Offsets"]
points = PoolVector2Array( 0, 0, 256, 0 )
width = 1.0
default_color = Color( 1, 0, 0, 1 )

[node name="OffX" type="SpinBox" parent="."]
margin_left = 682.0
margin_top = 278.0
margin_right = 756.0
margin_bottom = 299.0
theme = SubResource( 5 )
max_value = 256.0

[node name="OffY" type="SpinBox" parent="."]
margin_left = 795.0
margin_top = 278.0
margin_right = 869.0
margin_bottom = 299.0
theme = SubResource( 5 )
max_value = 256.0

[node name="OffWidth" type="SpinBox" parent="."]
margin_left = 682.0
margin_top = 311.0
margin_right = 756.0
margin_bottom = 332.0
theme = SubResource( 5 )
max_value = 256.0

[node name="OffHeight" type="SpinBox" parent="."]
margin_left = 795.0
margin_top = 311.0
margin_right = 869.0
margin_bottom = 332.0
theme = SubResource( 5 )
max_value = 256.0

[node name="FileDialogPos" type="Position2D" parent="."]
z_index = 1000

[node name="LoadTexture" type="FileDialog" parent="FileDialogPos"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 25.0
margin_right = 790.0
margin_bottom = 595.0
theme = SubResource( 7 )
window_title = "Open a file"
dialog_autowrap = true
mode_overrides_title = false
mode = 2
access = 2
show_hidden_files = true
current_dir = "/Users/Lucky/Documents/FunkinPSX Animation Helper"
current_path = "/Users/Lucky/Documents/FunkinPSX Animation Helper/"

[node name="LoadAnimation" type="FileDialog" parent="FileDialogPos"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 620.0
margin_right = 796.0
margin_bottom = 1190.0
theme = SubResource( 7 )
window_title = "Open a file"
dialog_autowrap = true
mode_overrides_title = false
mode = 2
access = 2
show_hidden_files = true
current_dir = "/Users/Lucky/Documents/FunkinPSX Animation Helper"
current_path = "/Users/Lucky/Documents/FunkinPSX Animation Helper/"

[node name="SaveAnimation" type="FileDialog" parent="FileDialogPos"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 25.0
margin_right = 790.0
margin_bottom = 595.0
theme = SubResource( 7 )
window_title = "Save a Animation File"
dialog_autowrap = true
mode_overrides_title = false
mode = 2
access = 2
show_hidden_files = true
current_dir = "/Users/Lucky/Documents/FunkinPSX Animation Helper"
current_path = "/Users/Lucky/Documents/FunkinPSX Animation Helper/"

[node name="SpinBox" type="SpinBox" parent="."]
margin_left = 33.0
margin_top = 506.0
margin_right = 107.0
margin_bottom = 527.0
theme = SubResource( 9 )
min_value = 1.0
max_value = 60.0
value = 24.0

[node name="Play" type="Button" parent="."]
margin_left = 109.0
margin_top = 507.0
margin_right = 145.0
margin_bottom = 528.0
custom_fonts/font = SubResource( 3 )
text = "Play"

[node name="Stop" type="Button" parent="."]
margin_left = 149.0
margin_top = 507.0
margin_right = 187.0
margin_bottom = 528.0
custom_fonts/font = SubResource( 3 )
text = "Stop"

[node name="Loop" type="Button" parent="."]
margin_left = 191.0
margin_top = 507.0
margin_right = 231.0
margin_bottom = 528.0
custom_fonts/font = SubResource( 3 )
toggle_mode = true
text = "Loop"

[connection signal="item_selected" from="ItemList2" to="." method="_on_ItemList2_item_selected"]
[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="Add Offset" to="." method="_on_Add_Offset_pressed"]
[connection signal="pressed" from="Remove Offset" to="." method="_on_Remove_Offset_pressed"]
[connection signal="pressed" from="Load Offset" to="." method="_on_Load_Offset_pressed"]
[connection signal="pressed" from="Add Frame" to="." method="_on_Add_Frame_pressed"]
[connection signal="pressed" from="Remove Frame" to="." method="_on_Remove_Frame_pressed"]
[connection signal="pressed" from="Load Frame" to="." method="_on_Load_Frame_pressed"]
[connection signal="pressed" from="Load Texture" to="." method="_on_Load_Texture_pressed"]
[connection signal="pressed" from="Save Animation" to="." method="_on_Save_Animation_pressed"]
[connection signal="file_selected" from="FileDialogPos/LoadTexture" to="." method="_on_LoadTexture_file_selected"]
[connection signal="file_selected" from="FileDialogPos/LoadAnimation" to="." method="_on_LoadAnimation_file_selected"]
[connection signal="file_selected" from="FileDialogPos/SaveAnimation" to="." method="_on_SaveAnimation_file_selected"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Stop" to="." method="_on_Stop_pressed"]
[connection signal="pressed" from="Loop" to="." method="_on_Stop_pressed"]
